# sophus-examples

example1/: CMakeLists.txt  useSophus.cpp
example2/: CMakeLists.txt  trajectoryError.cpp
